feat(header): implementa cabeçalho com logo, título e subtítulo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JO.ia - Assistente IA</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&family=Sono:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <header class="page-header">
+        <div class="logo-container">
+          <div class="brazilian-crystal">
+            <div class="gem"></div>
+          </div>
+          <div class="logo-text">JO.ia</div>
+        </div>
+        <h1 class="main-title">JO.ia</h1>
+        <p class="subtitle">Seu assistente inteligente</p>
+      </header>
+    </main>
+  </body>
 </html>
