feat(auth): adiciona input para inserir chave de API da OpenAI

--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
         <h1 class="main-title">JO.ia</h1>
         <p class="subtitle">Seu assistente inteligente</p>
       </header>
+
+      <section class="app-interface">
+        <div class="form-group">
+          <label for="apiKey" class="form-label">API Key OpenAI</label>
+          <input
+            type="password"
+            id="apiKey"
+            class="api-key-input"
+            placeholder="sk-..."
+            autocomplete="off"
+          />
+        </div>
+      </section>
     </main>
   </body>
 </html>
