feat(main): implementa alterações na área principal de interação com formulários

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body data-theme="light">
     <main class="container">
       <header class="page-header">
         <div class="logo-container">
@@ -27,7 +27,7 @@
 
       <section class="app-interface">
         <div class="form-group">
-          <label for="apiKey" class="form-label">API Key OpenAI</label>
+          <label for="apiKey" class="form-label">🔑 API Key GEMINI</label>
           <input
             type="password"
             id="apiKey"
