feat(main): adiciona campo de input para pergunta do usuário

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
         </div>
 
         <!-- Input para Pergunta -->
+        <div class="form-group">
+          <label for="question" class="form-label">💭 Sua Pergunta</label>
+          <textarea
+            name="question"
+            id="question"
+            class="question-textarea"
+            placeholder="Digite sua pergunta aqui..."
+            rows="4"
+            required
+            aria-required="true"
+          ></textarea>
+          <p class="keyboard-hint">
+            💡 Dica: Use <kbd>Ctrl</kbd> + <kbd>Enter</kbd> para enviar
+            rapidamente
+          </p>
+        </div>
 
         <!-- Botões 'Perguntar' e 'Limpar' -->
 
