--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
           </p>
         </div>
 
+        <div class="button-group">
+          <button type="submit" id="askBtn" class="btn btn-primary">
+            🚀 Perguntar
+          </button>
+        </div>
+
         <!-- Botões 'Perguntar' e 'Limpar' -->
 
         <!--  Area de resposta -->
