Removeu o código não utilizado e inclui o requisito na chave

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="form-group">
           <label for="apiKey" class="form-label">🔑 API Key GEMINI</label>
           <input
+            required
             type="password"
             id="apiKey"
             class="api-key-input"
